--- a/site/css/index.css
+++ b/site/css/index.css
@@ -1,15 +1,31 @@
 *{
     box-sizing: border-box;
 }
-
-h1{
+#header-nav {
+    background-color: #ceccc9;
+    border-radius: 0;
+    border: 0;
+  }
+  .container {
+	border: none;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	padding: 10px;
+}
+.navbar-brand {
+    font-size: 2em;
+    border: 0 0 10px 10px;
+  }
+h2{
     text-align: center;
     color: black;
     font: bold;
     font-family: 'Courier New', Courier, monospace;
     margin-bottom: 100px;
 }
-div#container{
+div#container-1{
     border: 1px solid black;
     background-color: aqua;
     width: 350px;
